crates/swc/tests/tsc-references/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5/input.ts/es2015.2.minified/output.js
var i;
i = i; // error
